--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@types/jquery": "^3.5.5",
+    "@types/owl.carousel": "^2.3.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "ngx-owl-carousel-o": "^5.0.0",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
